# libxdiff-sys

./: Cargo.toml  README  build.rs  wrapper.h
libxdiff-0.23/: Makefile  config.h  config.h.in  config.status  configure  libtool
libxdiff-0.23/man/: Makefile
libxdiff-0.23/test/: Makefile
libxdiff-0.23/tools/: Makefile
libxdiff-0.23/xdiff/: Makefile
